objects/clm__SyncLog__c.object
<CustomObject>
    <description>CT CLM: Sync Logs</description>
    <fields>
        <fullName>EUR_CRM_Country__c</fullName>
        <formula>Owner:User.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>clm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>clm__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>clm__ErrorsCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Errors count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>clm__FailedIds__c</fullName>
        <label>Failed IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>clm__FailedMessages__c</fullName>
        <label>Failed Messages</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>clm__GeoTiming__c</fullName>
        <label>Geo Timing</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>clm__GeoTracing__c</fullName>
        <label>Geo Tracing</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>clm__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>clm__HasRecoveryData__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This record contains data obtained through a recovery web service</inlineHelpText>
        <label>Has Recovery Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__RecordsCount__c</fullName>
        <label>Records count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>clm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                    <default>true</default>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>Partialy success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sync Log</label>
    <listViews>
        <fullName>Giovanni_Casula</fullName>
        <columns>NAME</columns>
        <columns>clm__Date__c</columns>
        <columns>clm__Operation__c</columns>
        <columns>clm__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Tsuso Tserere</value>
        </filters>
        <label>Giovanni Casula</label>
    </listViews>
    <listViews>
        <fullName>clm__All</fullName>
        <columns>NAME</columns>
        <columns>clm__Date__c</columns>
        <columns>clm__Operation__c</columns>
        <columns>clm__Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>clm__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sync logs</label>
    </listViews>
    <listViews>
        <fullName>jens_devantier</fullName>
        <columns>NAME</columns>
        <columns>clm__Date__c</columns>
        <columns>clm__Operation__c</columns>
        <columns>clm__Status__c</columns>
        <columns>clm__Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Adelaide Mbana</value>
        </filters>
        <label>jens devantier</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{000000000}</displayFormat>
        <label>Sync Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>